Update title and restructure OTP input form

--- a/index.html
+++ b/index.html
@@ -2,35 +2,81 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>OTP Email Verification</title>
-
-  <!-- EmailJS -->
+  <title>Login OTP</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: linear-gradient(135deg, #667eea, #764ba2);
+    }
+    .card {
+      background: white;
+      border-radius: 15px;
+      padding: 40px;
+      width: 350px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+      text-align: center;
+    }
+    input {
+      width: 100%;
+      padding: 12px;
+      margin: 10px 0;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      font-size: 14px;
+    }
+    button {
+      width: 100%;
+      padding: 12px;
+      border: none;
+      border-radius: 8px;
+      background: #667eea;
+      color: white;
+      font-weight: 600;
+      cursor: pointer;
+      margin-top: 10px;
+      font-size: 16px;
+      transition: 0.3s;
+    }
+    button:hover {
+      background: #5563c1;
+    }
+    #info, #timer {
+      font-size: 14px;
+      margin-top: 10px;
+      color: #555;
+    }
+    #resendBtn {
+      background: #a0aec0;
+    }
+    #resendBtn:hover {
+      background: #718096;
+    }
+  </style>
 </head>
 <body>
+  <div class="card">
+    <h2>Login OTP</h2>
+    <input type="email" id="email" placeholder="Email">
+    <input type="password" id="password" placeholder="Password">
+    <button onclick="sendOTP()">Kirim Kode OTP</button>
 
-  <h2>OTP Email Verification</h2>
+    <input type="text" id="otpInput" placeholder="Masukkan Kode OTP">
+    <button onclick="verifyOTP()">Verifikasi</button>
+    <button onclick="resendOTP()" id="resendBtn" disabled>Resend OTP</button>
 
-  <input id="email" placeholder="Masukkan Email">
-  <br><br>
+    <p id="info"></p>
+    <p id="timer"></p>
+  </div>
 
-  <button onclick="sendOTP()">Kirim OTP</button>
-
-  <br><br>
-
-  <input id="otpInput" placeholder="Masukkan OTP">
-  <br><br>
-
-  <button onclick="verifyOTP()">Verifikasi</button>
-
-  <br><br>
-
-  <button onclick="resendOTP()" id="resendBtn" disabled>Resend OTP</button>
-
-  <p id="info"></p>
-  <p id="timer"></p>
-
-  <!-- JS kamu -->
   <script src="script.js"></script>
 </body>
 </html>
