--- a/index.html
+++ b/index.html
@@ -66,7 +66,11 @@
   <div class="card">
     <h2>Login OTP</h2>
     <input type="email" id="email" placeholder="Email">
-    <input type="password" id="password" placeholder="Password">
+    <div style="position: relative;">
+  <input type="password" id="password" placeholder="Password" style="width:100%; padding-right: 40px;">
+  <span onclick="togglePassword()" 
+        style="position: absolute; right: 12px; top: 12px; cursor: pointer; user-select: none; font-size: 18px;">👁️</span>
+    </div>
     <button onclick="sendOTP()">Kirim Kode OTP</button>
 
     <input type="text" id="otpInput" placeholder="Masukkan Kode OTP">
