--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Login</title>
+  <titleH 💎</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
@@ -64,7 +64,7 @@
 </head>
 <body>
   <div class="card">
-    <h2>Login OTP</h2>
+    <h2>Login untuk lanjut</h2>
     <input type="email" id="email" placeholder="Email">
     <div style="position: relative;">
   <input type="password" id="password" placeholder="Password" style="width:100%; padding-right: 40px;">
